# novelx

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  decomposer-prompt-eval.vite.config.ts  electron-builder.update.yml  electron-builder.yml  electron.vite.config.ts  gm-prompt-eval.vite.config.ts  image-provider-live-smoke.vite.config.ts  package-lock.json  package.json  playwright.config.ts  prompt-eval-electron.vite.config.ts  prompt-eval.vite.config.ts  tsconfig.node.json  tsconfig.web.json  vitest.config.ts  vitest.integration.config.ts
runtime/: Cargo.toml
runtime/crates/novelx-protocol/: Cargo.toml
runtime/crates/novelx-protocol/src/: lib.rs
runtime/crates/novelx-runtime/: Cargo.toml
runtime/crates/novelx-runtime/migrations/: 0001_event_journal.sql  0002_event_stream_addressing.sql  0003_artifact_store.sql  0004_workspace_event_journal.sql  0005_global_event_clock.sql  0006_durable_global_event_order.sql
runtime/crates/novelx-runtime/src/: agent_assignment_aggregate.rs  agent_assignment_command_service.rs  agent_assignment_recovery.rs  agent_loop_journal.rs  agent_loop_service.rs  artifact_store.rs  assist_continuation_handshake_service.rs  context_compile_service.rs  context_compiler.rs  continuation_context_service.rs  event_journal.rs  goal_aggregate.rs  goal_plan_command_service.rs  lib.rs  live_agent_loop_runner.rs  main.rs  operational_recovery_action.rs  operational_recovery_aggregate.rs  operational_recovery_claim_service.rs  operational_recovery_completion_service.rs  operational_recovery_projection_service.rs  operational_recovery_recording_service.rs  operational_recovery_scanner.rs  operational_recovery_supervisor.rs  plan_aggregate.rs  project_file_tools.rs  project_path.rs  project_search_tools.rs  project_tool_dispatcher.rs  project_tool_execution_service.rs  provider_attempt.rs  provider_dispatch_recovery_service.rs  provider_dispatch_recovery_supervisor.rs  provider_dispatch_resume_authorization_service.rs  provider_effect_authorization_service.rs  provider_effect_capability.rs  provider_gateway.rs  provider_inference_protocol.rs  provider_inference_service.rs  provider_pre_send_gate.rs  (+20 more)
runtime/crates/novelx-runtime/tests/: agent_assignment_aggregate.rs  agent_assignment_command_service.rs  agent_assignment_recovery.rs  agent_loop_journal.rs  agent_loop_service.rs  artifact_store.rs  context_compile_service.rs  context_compiler.rs  continuation_context_service.rs  event_journal.rs  global_event_ledger.rs  goal_aggregate.rs  goal_plan_command_service.rs  handshake.rs  live_agent_loop_runner.rs  operational_recovery_aggregate.rs  operational_recovery_claim_service.rs  operational_recovery_recording_service.rs  operational_recovery_scanner.rs  plan_aggregate.rs  project_file_tools.rs  project_path.rs  project_tool_dispatcher.rs  project_tool_execution_service.rs  provider_attempt_recovery.rs  provider_dispatch_recovery_handshake.rs  provider_dispatch_recovery_service.rs  provider_dispatch_recovery_supervisor.rs  provider_effect_authorization_service.rs  provider_effect_capability.rs  provider_gateway.rs  provider_inference.rs  provider_inference_handshake.rs  provider_inference_protocol.rs  provider_inference_service.rs  provider_recovery_effect_authorization_service.rs  provider_recovery_killpoints.rs  provider_retry_aggregate.rs  (+14 more)
(+820 files in other folders)
