[workspace]
members = [
  "crates/novelx-protocol",
  "crates/novelx-runtime",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.95"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
secrecy = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util", "sync", "time"] }
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
url = "2.5"
