[package]
name = "novelx-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-test-failpoints = []

[[bin]]
name = "novelx-runtime"
path = "src/main.rs"

[[test]]
name = "provider_recovery_killpoints"
path = "tests/provider_recovery_killpoints.rs"
required-features = ["runtime-test-failpoints"]

[dependencies]
novelx-protocol = { path = "../novelx-protocol" }
rusqlite.workspace = true
fs2.workspace = true
httpdate.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
secrecy.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile = "3.20"
